@@ -18,6 +18,9 @@ API Changes
 * GITHUB#11761: TieredMergePolicy now allowed a maximum allowable deletes percentage of down to 5%, and the default
   maximum allowable deletes percentage is changed from 33% to 20%. (Marc D'Mello)
 
+* GITHUB#11840: Query rewrite now is able to take an IndexSearcher instead of IndexReader to enable concurrent
+  rewriting. The original method is marked as deprecated. (Patrick Zhai)
+
 Improvements
 ---------------------
 * GITHUB#11785: Improve Tessellator performance by delaying calls to the method
